# streamlit-with-firebase

./: .gitignore  .gitlab-ci.yml  README.md
.github/workflows/: release-to-dev.yaml  tests.yaml
deploy/: cloudbuild-dev.yaml  test.sh
src/: Dockerfile  app.py  pyproject.toml
src/libs/: common.py  firebase.py
src/pages/: bq.py
